# cosmicverge-prelude

./: .gitignore  Cargo.toml  README.md
crates/cosmic-prelude-cli/: Cargo.toml
crates/cosmic-prelude-cli/src/: main.rs
crates/cosmic-prelude-server/: Cargo.toml
crates/cosmic-prelude-server/src/: cli.rs  main.rs  server.rs
crates/cosmic-prelude-shared/: Cargo.toml
crates/cosmic-prelude-shared/src/: api.rs  db.rs
crates/cosmic-prelude-shared/src/db/: character.rs
