[package]
name = "cosmic-prelude-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cosmic-prelude"
path = "src/main.rs"

[features]

[dependencies]
cosmic-prelude-shared = { path = "../cosmic-prelude-shared", version = "0.1.0" }
bonsaidb = { git = "https://github.com/khonsulabs/bonsaidb.git", branch = "main", features = [
    "client",
    "client-password-hashing",
    "client-trusted-dns",
] }
clap = { version = "3.0.14", features = ["derive"] }
crossterm = "0.22.1"
termion = "1.5.6"
anyhow = "1.0.53"
tokio = { version = "1.16.1", features = ["full"] }
