[package]
name = "cosmic-prelude-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmic-prelude-shared = { path = "../cosmic-prelude-shared", version = "0.1.0" }
bonsaidb = { git = "https://github.com/khonsulabs/bonsaidb.git", branch = "main", features = [
    "server",
    "server-password-hashing",
    "server-encryption",
    "cli",
] }
env_logger = "0.9.0"
anyhow = "1.0.53"
clap = { version = "3.0.14", features = ["derive"] }
tokio = { version = "1.16.1", features = ["full"] }
actionable = "0.1"
