[package]
name = "cosmic-prelude-shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bonsaidb-core = { git = "https://github.com/khonsulabs/bonsaidb.git", branch = "main", features = [
    "password-hashing",
] }
serde = { version = "1.0.136", features = ["derive"] }
actionable = "0.1.0"
thiserror = "1.0.30"
